--- a/package.json
+++ b/package.json
@@ -43,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@expo/webpack-config": "^18.0.1"
   }
 }
